usr(systemd-dbus): add back the systemd dir

--- a/configs-usr/tmpfiles.d/coreos-base.conf
+++ b/configs-usr/tmpfiles.d/coreos-base.conf
@@ -17,3 +17,6 @@ d /var/lib/portage      -       -       -       -       -
 # To avoid a non-upstream vim ebuild
 d /etc/vim		-	-	-	-	-
 L /etc/vim/vimrc	-	-	-	-	/usr/share/vim/vimrc
+
+# For convenience
+d /etc/systemd/system	-	-	-	-	-
