fix(resolvconf): add link for networkd

--- a/configs-usr/tmpfiles.d/coreos-base.conf
+++ b/configs-usr/tmpfiles.d/coreos-base.conf
@@ -27,3 +27,6 @@ f /etc/security/limits.conf	-	-	-	-	-
 f /etc/security/namespace.conf	-	-	-	-	-
 f /etc/security/pam_env.conf	-	-	-	-	-
 f /etc/security/time.conf	-	-	-	-	-
+
+# for networkd
+L /etc/resolv.conf	-	-	-	-	/run/systemd/network/resolv.conf
